--- a/src/MainData/MainData.scss
+++ b/src/MainData/MainData.scss
@@ -143,7 +143,7 @@
         top: 970px;
         display: flex;
         align-items: center;
-        background: url(/static/media/iPhone_7_Plus_Silver.f2f7b54f.png) 62% 65%/22% no-repeat, url(/static/media/Circle.4cab36ef.png) 75% -5%/25% no-repeat;
+        background: url(./content/iPhone_7_Plus_Silver.png) 62% 65%/22% no-repeat, url(./content/Circle.png) 75% -5%/25% no-repeat;
 
         
         .info {
